<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>com.spiczek.loftyentropy</groupId>
    <artifactId>LoftyEntropy</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <gwt.version>2.6.1</gwt.version>
        <maven.plugin.version>2.6.1</maven.plugin.version>
        <war.plugin.version>2.3</war.plugin.version>
        <compiler.plugin>2.5.1</compiler.plugin>
        <appengine.plugin.version>1.9.7</appengine.plugin.version>
        <appengine.target.version>1.9.7</appengine.target.version>

        <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <tomcat.webport>8082</tomcat.webport>
        <tomcat.ajpport>8182</tomcat.ajpport>
        <tomcat.context>/app</tomcat.context>
    </properties>

    <modules>
        <module>chat-backend</module>
        <module>chat-shared</module>
        <module>chat-frontend</module>
        <module>chat-datastore</module>
    </modules>

    <!--<build>-->
        <!--<finalName>chat</finalName>-->

        <!--<pluginManagement>-->
            <!--<plugins>-->
                <!--<plugin>-->
                    <!--<groupId>org.codehaus.mojo</groupId>-->
                    <!--<artifactId>gwt-maven-plugin</artifactId>-->
                    <!--<version>${maven.plugin.version}</version>-->
                <!--</plugin>-->
                <!--<plugin>-->
                    <!--<artifactId>maven-war-plugin</artifactId>-->
                    <!--<version>2.1</version>-->
                <!--</plugin>-->
            <!--</plugins>-->
        <!--</pluginManagement>-->
        <!--<plugins>-->
            <!--<plugin>-->
                <!--<artifactId>maven-compiler-plugin</artifactId>-->
                <!--<version>2.1</version>-->
                <!--<configuration>-->
                    <!--<source>1.5</source>-->
                    <!--<target>1.5</target>-->
                <!--</configuration>-->
            <!--</plugin>-->

            <!--<plugin>-->
                <!--<groupId>org.apache.tomcat.maven</groupId>-->
                <!--<artifactId>tomcat7-maven-plugin</artifactId>-->
                <!--<version>2.0</version>-->
                <!--<configuration>-->
                    <!--<path>${tomcat.context}</path>-->
                    <!--<port>${tomcat.webport}</port>-->
                    <!--<ajpPort>${tomcat.ajpport}</ajpPort>-->
                    <!--<systemProperties>-->
                        <!--<JAVA_OPTS>-XX:MaxPermSize=256m</JAVA_OPTS>-->
                    <!--</systemProperties>-->
                <!--</configuration>-->
            <!--</plugin>-->
        <!--</plugins>-->
    <!--</build>-->

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.google.gwt</groupId>
                <artifactId>gwt-user</artifactId>
                <version>${gwt.version}</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>com.google.gwt</groupId>
                <artifactId>gwt-servlet</artifactId>
                <version>${gwt.version}</version>
                <scope>runtime</scope>
            </dependency>

            <dependency>
                <groupId>com.google.appengine</groupId>
                <artifactId>appengine-api-1.0-sdk</artifactId>
                <version>${appengine.target.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- logging -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.7</version>
        </dependency>

        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.17</version>
        </dependency>

        <!-- BINDINGS -->
        <!-- No config file needed -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>1.7.7</version>
        </dependency>

        <!-- Silently discarding all logging -->
        <!--<dependency>-->
        <!--<groupId>org.slf4j</groupId>-->
        <!--<artifactId>slf4j-nop</artifactId>-->
        <!--<version>1.7.7</version>-->
        <!--</dependency>-->

        <!-- Log4j binding -->
        <!--<dependency>-->
        <!--<groupId>org.slf4j</groupId>-->
        <!--<artifactId>slf4j-log4j12</artifactId>-->
        <!--<version>1.7.7</version>-->
        <!--</dependency>-->
        <!-- END BINDINGS -->
    </dependencies>

    <build>
        <plugins>

        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>gwt-maven-plugin</artifactId>
                    <version>${maven.plugin.version}</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>${war.plugin.version}</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${compiler.plugin}</version>
                    <configuration>
                        <source>1.6</source>
                        <target>1.6</target>
                    </configuration>
                </plugin>

            </plugins>
        </pluginManagement>
    </build>

</project>